Refactor services and controllers for improved structure
This commit introduces significant refactoring to enhance the structure and maintainability of the project:

- **Controllers Renamed & Updated**:
  - `ReportController` is now `CryptoraController`, reflecting a broader scope.
  - Endpoints have been adjusted:
    - `/api/v1/report/{ticker}` → `/api/v1/cryptora/report/{ticker}`
    - A new analysis endpoint `/api/v1/cryptora/analysis/{ticker}` has been added.

- **Service Layer Improvements**:
  - `AnalyticService` is now `AnalysisService`, with enhanced method structures.
  - Configuration values (`shortTimePeriod`, `longTimePeriod`, etc.) are now injected via constructor parameters instead of field injection.
  - Improved signal evaluation logic and response encapsulation in an `Analysis` DTO.

These changes improve code readability, reduce tight coupling, and enhance future extensibility.