@@ -6,12 +6,12 @@ import com.dzenthai.cryptora.model.entity.Quote;
 import com.dzenthai.cryptora.repository.QuoteRepo;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Slf4j
@@ -24,35 +24,31 @@ public class QuoteService {
         this.quoteRepo = quoteRepo;
     }
 
-    @Transactional(readOnly = true)
     public List<Quote> getAllQuotes() {
         log.debug("QuoteService | Receiving all quotes");
         return quoteRepo.findAll();
     }
 
-    @Transactional(readOnly = true)
     public List<Quote> getQuotesByTicker(String ticker) {
         log.debug("QuoteService | Receiving all quotes by ticker: {}", ticker);
         return quoteRepo.findAll()
                 .stream()
                 .filter(quote -> quote.getTicker().equals(ticker.concat("USDT")))
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    @Transactional
-    public Quote save(Quote quote) {
-        log.debug("QuoteService | Quote successfully saved, quote: {}", quote);
-        return quoteRepo.save(quote);
-    }
-
-    @Transactional
     public Quote addNewQuote(TickerPrice tickerPrice, List<Candlestick> candlesticks) {
-
         var candlestick = candlesticks.getLast();
         var quote = buildQuote(tickerPrice, candlestick);
 
-        log.debug("QuoteService | Adding new quote with ticker: {}, quote: {}, datetime: {}", tickerPrice, quote, quote.getDatetime());
+        log.debug("QuoteService | Adding new quote with ticker: {}, quote: {}, datetime: {}",
+                tickerPrice, quote, quote.getDatetime());
         return save(quote);
+    }
+
+    private Quote save(Quote quote) {
+        log.debug("QuoteService | Quote successfully saved, quote: {}", quote);
+        return quoteRepo.save(quote);
     }
 
     private Quote buildQuote(TickerPrice tickerPrice, Candlestick candlestick) {
